feat(stack): slice 70-Z — render source card for ability stack objects
Triggered and activated abilities on the stack used to render as a
blank "Ability" placeholder card with the trigger text only on
hover. Players had no quick visual cue for WHICH permanent fired,
which is especially painful in 4-player Commander where multiple
boards are in play and multi-trigger interactions are common.

Add an additive `source` field to WebCardView (schema 1.26) that
carries the FULL CardView of the source card for any AbilityView-
shaped stack object. Webclient's focal stack and fan tiles swap
their CardFace input from the ability view to the source view when
`source` is non-null, so triggered/activated abilities now render
as a copy of the source card on the stack.

Layout / motion semantics:
- The source permanent stays on the battlefield untouched. layoutId
  on the focal/fan motion.div uses the entry's own cardId (an
  ability-unique id), NOT the source's cardId — Framer must not
  animate the source permanent off-board to the focal stack.
- Multiple triggers from the same source render as multiple
  visuals (no badge collapse), matching MTG rules: each is an
  independent stack object.
- Spells unchanged (source = null on the wire); existing focal
  rendering unaffected.

Recursion-capped at one level on the wire: source.source is always
null. Mirror the secondCardFace recursion-cap pattern in the
mapper (allowSource flag threaded through toCardDto).

Server: 367 tests (was 365 + 2 new mapper tests for the source
populate path and the ordinary-card null path).
Webclient: 970 tests (was 964 + 6 new StackZone tests covering
focal source swap, layoutId preservation, multi-trigger fan, fan-
tile swap, legacy-branch swap, and spell fallback).